--- a/To-Do-List/package.json
+++ b/To-Do-List/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@formkit/drag-and-drop": "^0.0.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
